# TridentifyIshaan

./: BMP_Harvard.py  README.md
.github/workflows/: blank.yml  snake.yml  update-now-building.yml
now-building-block-updater/: .gitignore  README.md  action.yml  pyproject.toml
now-building-block-updater/.github/workflows/: monthly-update.yml
now-building-block-updater/src/now_building_updater/: __init__.py  cli.py  generator.py  github_api.py
