[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "now-building-block-updater"
version = "0.1.0"
description = "Auto-insert and monthly update a Now Building block in README files from GitHub repo activity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]
authors = [
  { name = "Now Building Updater Contributors" }
]
license = { text = "MIT" }

[project.scripts]
now-building-updater = "now_building_updater.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
